--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
-    implementation 'com.karumi:dexter:6.1.0'
     implementation 'com.android.support:customtabs:28.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
