--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
     implementation 'com.android.support:customtabs:28.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    implementation 'com.maltaisn:icondialog:3.2.2'
+    implementation "com.maltaisn:iconpack-default:1.0.0"
 }
