--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_barcode"
+        android:icon="@mipmap/ic_barcode_dark"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_barcode_round"
         android:screenOrientation="portrait"
